Wed Jan  5 15:19:52 2005                        Michael Jennings (mej)

Spec dependency fixes.
----------------------------------------------------------------------
Mon Mar  7 15:06:39 2005                        Michael Jennings (mej)

Miscellaneous autoFUCKMEUPTHEASSWITHAPINETREE fixes.
----------------------------------------------------------------------
Mon Mar  7 17:28:00 2005                        Michael Jennings (mej)

Cleaner "make maintainer-clean"

Finally found and fixed that stupid "Config file is designed for a
newer version of FOO" bullshit warning.
----------------------------------------------------------------------
Tue Jun  7 16:28:43 2005                        Michael Jennings (mej)

Force STRICT_ISO_C99 to be defined when using gcc >= 4.0.  Suggestions
and partial patch from John Ellson <ellson@research.att.com>.
----------------------------------------------------------------------
Mon Aug 22 23:02:03 2005                        Michael Jennings (mej)

Add more quoting to libast.m4 for newer autoSPANK tools.
----------------------------------------------------------------------
Thu Sep  1 02:20:29 2005                        Michael Jennings (mej)

Additional quoting for libast.m4.
----------------------------------------------------------------------
Thu Dec 22 18:29:54 2005                        Michael Jennings (mej)

Fixed auto-detection of Imlib2.  :-(
----------------------------------------------------------------------
Mon Jan 23 14:29:26 2006                        Michael Jennings (mej)

0.7 final release.  Includes fix for CVE-2006-0224 buffer overflow
discovered by Rosiello Security.  Details can be found at
http://www.rosiello.org/en/read_bugs.php?id=25
----------------------------------------------------------------------
Sun Feb  5 00:58:03 2006                        Michael Jennings (mej)

Fixed off-by-1 error in spiftool_join().
----------------------------------------------------------------------